feat: Add web app version update notification
Detect when a new version is deployed and prompt users to reload.

- Add Service Worker update detection in web/index.html
- Create AppUpdateService with Dart-JS interop
- Show dialog with "Update" / "Later" options
- Check on app start and every 30 seconds for long sessions

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_slidable: ^4.0.3
 
+  # Web (for service worker update detection)
+  web: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
