--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   file_picker: ^8.1.6
   image_picker: ^1.1.2
   path_provider: ^2.1.5
+  http: ^1.2.0
 
   # Storage
   shared_preferences: ^2.3.4
