--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your-anon-key-here
 
+# Service Key für Claude MCP Server (optional, für Schema-Inspektion)
+# Holen von: Supabase Dashboard → Project Settings → API → service_role
+SUPABASE_SERVICE_KEY=your-service-key-here
+
 # Demo Credentials (optional, for development only)
 DEMO_EMAIL=demo@example.com
 DEMO_PASSWORD=your-demo-password
