--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ app.*.map.json
 # Environment files (contain secrets)
 .env
 *.env.local
+
+# Claude Code worktrees (für parallele Entwicklung)
+.claude/worktrees/
+.claude/settings.local.json
