--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: attendix
 description: "Attendance Management App - Flutter Version"
 publish_to: 'none'
-version: 0.1.2+3
+version: 0.1.3+4
 
 environment:
   sdk: ^3.7.0
@@ -33,6 +33,10 @@ dependencies:
   # PDF
   pdf: ^3.11.1
   printing: ^5.13.4
+  pdfx: ^2.6.0
+
+  # ZIP
+  archive: ^3.6.1
 
   # Excel
   excel: ^4.0.6
