fix(ci): Resolve CI pipeline failures
- Ignore invalid_annotation_target warning (Freezed false positive)
- Add .env.example and setup step for CI test environment
- Add placeholder .gitkeep for assets/images directory
- Fix unnecessary casts and dead null-aware expressions
- Remove unused import in skeleton_list_tile

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Get dependencies
         run: flutter pub get
 
+      - name: Setup test environment
+        run: cp .env.example .env
+
       - name: Run tests
         run: flutter test --coverage
 
