fix(ci): Use fatal-warnings instead of fatal-infos for analyze

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         run: flutter pub get
 
       - name: Analyze code
-        run: dart analyze lib/ --fatal-infos
+        run: dart analyze lib/ --fatal-warnings
 
   test:
     name: Test
